# AI-Powered-Stateful-Personal-Firewall

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  APPLICATION_REPORT.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Project plan.md  README.md  SECURITY.md  alembic.ini  coverage.xml  docker-compose.yml  fix_lint.py  requirements.txt  validation_output.txt
.github/: dependabot.yml
agent/: agent.py  agent_id.txt  requirements.txt
agent/python/: Dockerfile  pyproject.toml
agent/python/sentinelx_agent/: config.py  main.py  registration.py
agent/python/sentinelx_agent/collectors/: file_collector.py  network_collector.py  process_collector.py  registry_collector.py  system_collector.py
agent/python/sentinelx_agent/transport/: http_client.py
alembic/: env.py
analytics/: cache.py  features.py  flow_engine.py  metrics_engine.py  scheduler.py  threat_scoring.py
api/: config.py  main.py  models.py  security.py
backend/: main.py  requirements.txt
backend/services/alert-engine/: Dockerfile  pyproject.toml
backend/services/alert-engine/app/: main.py
backend/services/alert-engine/app/routers/: alerts.py  incidents.py
backend/services/alert-engine/app/services/: correlation.py  scoring.py
backend/services/auth/: Dockerfile  pyproject.toml
backend/services/auth/app/: dependencies.py  main.py  schemas.py
backend/services/auth/app/middleware/: audit_log.py
backend/services/auth/app/routers/: auth.py  mfa.py  users.py
backend/services/auth/tests/: conftest.py  test_auth.py
backend/shared/: pyproject.toml
backend/shared/sentinelx_shared/: __init__.py  cache.py  config.py  db.py  kafka_client.py  security.py
backend/shared/sentinelx_shared/models/: __init__.py  alert.py  endpoint.py  event.py  incident.py  threat_intel.py  user.py
data/: benchmark_output.txt  simulation_output.txt
doc/: ARCHITECTURE.md  DEPLOYMENT.md  Final_Hardening_Report.md  Idea.md  Phase_1_Completion_Report.md  Phase_2A_Final_Readiness_Report.md  Phase_2B_API_Documentation.md  Phase_2_Architecture.md  Production_Validation_Readiness_Report.md  Project_Status_Report.md  Review and development report.md  Review_and_Development_Completion_Report.md  Tech_Stack.md  Workflow.txt
docs/: agent-setup.md  api-reference.md  architecture.md  deployment.md
firewall/: __init__.py  cli.py  connection_tracker.py  database.py  db_writer.py  event_bus.py  firewall.py  ids_engine.py  logger.py  models.py  packet_capture.py  queue_manager.py  rule_engine.py  threat_intel.py
frontend/: .dockerignore  .env.example  .gitignore  README.md  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
ml/: dataset_generator.py  ml_detector.py  pcap_parser.py  train_model.py
scripts/: actual_validations.py  backup_db.py  benchmark.py  benchmark_api.py  benchmark_ml.py  benchmark_monitoring.py  find_dead_code.py  generate_training_data.py  load_test_full_pipeline.py  profile_pipeline.py  refactor_tailwind.py  simulate_attacks.py  stability_test.py  test_ml_consistency.py  test_ml_robustness.py  validate_cache_scheduler.py  validate_dataset.py  validate_failures.py  validate_features.py  validate_flow_engine.py  validate_queue_db.py  validate_threat_scoring.py
tests/: ATTACK_SIMULATION.md  conftest.py  test_api.py  test_api_integration.py  test_auto_mitigation.py  test_cli.py  test_connection_tracker.py  test_database.py  test_firewall_actions.py  (+9 more)
(+190 files in other folders)
