[project]
name = "sentinelx-agent"
version = "0.1.0"
description = "SentinelX Endpoint Detection Agent"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "psutil>=6.0",
    "watchdog>=4.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306",     # Windows Registry access
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
sentinelx-agent = "sentinelx_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
