[project]
name = "sentinelx-auth"
version = "0.1.0"
description = "SentinelX Authentication & Authorization Service"
requires-python = ">=3.12"
dependencies = [
    "sentinelx-shared",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "slowapi>=0.1.9",           # Rate limiting
    "python-multipart>=0.0.9",
    "emails>=0.6",              # Email verification
    "jinja2>=3.1",
    "alembic>=1.13",
    "asyncmy>=0.2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",              # TestClient
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]

